discussion/kv_engine/168594/168594_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50110: CheckpointMemRecoveryTask is a NotifiableTask

NotifiableTask implements all the necessary wakeup logic, so any tasks
that extends from it gets that.

With this patch only the CheckpointMemRecoveryTask uses the new
implementation, others will follow.

Change-Id: I152d77ab2b9637aecfd97aa76f50816c90c26f76

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-01-13 14:32:01.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-01-13 14:32:48.000000000
Message: 
Patch Set 5: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-01-13 14:49:41.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42790/ : ABORTED

Failure of GoogleTest "CheckpointRemoverTest.BackgroundCheckpointRemovalWakesDestroyer":

<pre>
[ RUN      ] CheckpointRemoverTest.BackgroundCheckpointRemovalWakesDestroyer
unknown file: error: C++ exception with description "CheckedExecutor::runCurrentTask(): Expected task: "CheckpointMemRecoveryTask:0" got "CheckpointMemRecoveryTask:1"" thrown in the test body.
[  FAILED  ] CheckpointRemoverTest.BackgroundCheckpointRemovalWakesDestroyer (22 ms)
CheckpointRemoverTest.BackgroundCheckpointRemovalWakesDestroyer
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42790/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42790/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17554/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14802/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/notifiable_task.cc:23:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(static_cast<size_t>(uid));
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14802/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/notifiable_task.cc:23:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14802/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36257/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/notifiable_task.cc:23:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36257/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15609/ : FAILURE

Failure of GoogleTest "CheckpointRemoverEPTest.MemoryRecoveryEnd":

<pre>
[ RUN      ] CheckpointRemoverEPTest.MemoryRecoveryEnd
[2022-01-13T14:46:43.818Z] unknown file: Failure
[2022-01-13T14:46:43.818Z] C++ exception with description "CheckedExecutor::runCurrentTask(): Expected task: "CheckpointMemRecoveryTask:0" got "CheckpointMemRecoveryTask:1"" thrown in the test body.
[2022-01-13T14:46:43.818Z] [  FAILED  ] CheckpointRemoverEPTest.MemoryRecoveryEnd (31 ms)
CheckpointRemoverEPTest.MemoryRecoveryEnd
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15609/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4505/ : FAILURE

Failure of GoogleTest "CheckpointRemoverTest.BackgroundCheckpointRemovalWakesDestroyer":

<pre>
[ RUN      ] CheckpointRemoverTest.BackgroundCheckpointRemovalWakesDestroyer
[2022-01-13T14:39:52.258Z] unknown file: Failure
[2022-01-13T14:39:52.258Z] C++ exception with description "CheckedExecutor failed fetchNextTask" thrown in the test body.
[2022-01-13T14:39:52.258Z] [  FAILED  ] CheckpointRemoverTest.BackgroundCheckpointRemovalWakesDestroyer (4 ms)
CheckpointRemoverTest.BackgroundCheckpointRemovalWakesDestroyer
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4505/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16468/ : FAILURE

Failure of GoogleTest "CheckpointRemoverEPTest.MemoryRecoveryEnd":

<pre>
[ RUN      ] CheckpointRemoverEPTest.MemoryRecoveryEnd
[2022-01-13T14:40:02.731Z] unknown file: Failure
[2022-01-13T14:40:02.731Z] C++ exception with description "CheckedExecutor::runCurrentTask(): Expected task: "CheckpointMemRecoveryTask:0" got "CheckpointMemRecoveryTask:1"" thrown in the test body.
[2022-01-13T14:40:02.731Z] [  FAILED  ] CheckpointRemoverEPTest.MemoryRecoveryEnd (55 ms)
CheckpointRemoverEPTest.MemoryRecoveryEnd
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16468/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16761/ : FAILURE

Failure of GoogleTest "CheckpointRemoverEPTest.MemoryRecoveryEnd":

<pre>
[ RUN      ] CheckpointRemoverEPTest.MemoryRecoveryEnd
[2022-01-13T14:41:25.552Z] unknown file: Failure
[2022-01-13T14:41:25.552Z] C++ exception with description "CheckedExecutor::runCurrentTask(): Expected task: "CheckpointMemRecoveryTask:0" got "CheckpointMemRecoveryTask:1"" thrown in the test body.
[2022-01-13T14:41:25.552Z] [  FAILED  ] CheckpointRemoverEPTest.MemoryRecoveryEnd (49 ms)
CheckpointRemoverEPTest.MemoryRecoveryEnd
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16761/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16761/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24881/ : FAILURE

Failure of GoogleTest "CheckpointRemoverEPTest.MemoryRecoveryEnd":

<pre>
[ RUN      ] CheckpointRemoverEPTest.MemoryRecoveryEnd
[2022-01-13T14:40:07.573Z] unknown file: Failure
[2022-01-13T14:40:07.573Z] C++ exception with description "CheckedExecutor failed fetchNextTask" thrown in the test body.
[2022-01-13T14:40:07.573Z] [  FAILED  ] CheckpointRemoverEPTest.MemoryRecoveryEnd (103 ms)
CheckpointRemoverEPTest.MemoryRecoveryEnd
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24881/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13647/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4447/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
